# crypto-claude-desk

./: .gitignore  .mcp.json.template  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mcp-servers.plugin.json  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: market-monitor.md  portfolio-manager.md
.claude/skills/quick/: SKILL.md
agents/: learning-agent.md  news-sentiment.md  portfolio-manager.md  risk-specialist.md  system-builder.md  technical-analyst.md
data/trades/: agent-scorecards.json.example  patterns.json.example  portfolio.json.example  predictions.json.example
docs/: architecture.md  extending.md
hooks/: hooks.json  post-setup.sh
mcp-servers/: crypto_advanced_indicators.py  crypto_exchange_ccxt_ultra.py  crypto_futures_data.py  crypto_learning_db.py  crypto_market_microstructure.py  crypto_technical_analysis.py  crypto_ultra_simple.py  validators.py
skills/analyze/: SKILL.md
skills/close-trade/: SKILL.md
skills/create/: SKILL.md
skills/monitor/: SKILL.md
skills/portfolio/: SKILL.md
skills/quick/: SKILL.md
skills/setup/: SKILL.md
skills/validate-predictions/: SKILL.md
tests/: conftest.py  helpers.py  test_crypto_advanced_indicators.py  test_crypto_data.py  test_crypto_exchange.py  test_crypto_futures.py  test_crypto_learning_db.py  test_crypto_microstructure.py  test_crypto_technical.py  test_validators.py
